--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,17 +9,24 @@
     <div class="wrapper">
       <header>
         <nav>
-          <a href="/">Home</a>
-          <a href="/dashboard">Dashboard</a>
-          <a href="login">Login</a>
+            <a href="/">Home</a>
+          {{#if loggedIn}}
+            <a href="/dashboard">Dashboard</a>
+            <button id="logout">Logout</button>
+          {{else}}
+            <a href="/login">Login</a>
+          {{/if}}
         </nav>
         <h1>
           <a href="/">The Tech Blog</a>
         </h1>
       </header>
       <main>
-        {{{ body }}}
+        {{{body}}}
       </main>
     </div>
+    {{#if loggedIn}}
+      <script src="/javascript/logout.js"></script>
+    {{/if}}
   </body>
 </html>
