--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,15 +11,23 @@
         <nav>
             <a href="/">Home</a>
           {{#if loggedIn}}
+          {{#unless onDashboard}}
             <a href="/dashboard">Dashboard</a>
+          {{/unless}}
             <button id="logout">Logout</button>
           {{else}}
             <a href="/login">Login</a>
           {{/if}}
         </nav>
+        {{#if onDashboard}}
+        <h1>
+          <a href="/dashboard">Dashboard</a>
+        </h1>
+        {{else}}
         <h1>
           <a href="/">The Tech Blog</a>
         </h1>
+        {{/if}}
       </header>
       <main>
         {{{body}}}
