--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,16 +3,8 @@
     <h2>Your Posts</h2>
     <ul>
       {{#each posts}}
-        <li>
-          <article class="post">
-            <div class="title">
-              <a href="/post/{{id}}">{{title}}</a>
-            </div>
-            <div>
-              {{created_at}}
-            </div>
-          </article>
-        </li>
+      <a href="/dashboard/edit/{{id}}">{{title}} <span>{{created_at}}</span></a>
+      <br>
       {{/each}}
     </ul>
 {{/if}}
