--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,8 +1,8 @@
 <article class="post">
   <div class="title">
-    <a href="/post/{{id}}">{{title}}</a>
+    <a href="/post/{{id}}">{{title}} Posted by {{user.username}} on {{created_at}}</a>
   </div>
-  <div>
+  <div class="description">
     {{description}}
   </div>
 </article>
