--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,7 +3,7 @@
     <h2>Your Posts</h2>
     <ul>
       {{#each posts}}
-      <a href="/dashboard/edit/{{id}}">{{title}} <span>{{created_at}}</span></a>
+      <a href="/dashboard/edit/{{id}}">{{title}} <span>{{format_date created_at}}</span></a>
       <br>
       {{/each}}
     </ul>
