--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,11 +1,11 @@
 <div class="comments">
   {{#each this}}
   <section class="comment">
-    <div class="meta">
-      {{user.username}} on {{created_at}}
-    </div>
     <div class="text">
       {{comment_text}}
+    </div>
+    <div class="meta">
+      -{{user.username}}, {{format_date created_at}}
     </div>
   </section>
   {{/each}}
