--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -2,11 +2,12 @@
 
 {{#if loggedIn}}
 <form class="comment-form">
+  <h2>Comment</h2>
   <div>
     <textarea name="comment-body"></textarea>
   </div>
   <div>
-    <button type="submit">add comment</button>
+    <button type="submit">Submit</button>
   </div>
 </form>
 {{/if}}
