--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,6 @@
 <form class="signup-form">
+  <h2>Sign Up</h2>
+  <div class="signup">
   <div>
     <label for="username-login">Username</label>
     <input type="text" id="username-signup"/>
@@ -11,7 +13,7 @@
     <button type="submit">Sign Up!</button>
   </div>
   <div>
-    <a href="/login">Login instead</a>
+    <a href="/login" class="fix-color">Login instead</a>
   </div>
 </form>
 
