--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,29 +4,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Tech Blog</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <div class="wrapper">
-      <header>
+    <div>
+      <header class="px-4 py-2">
         <nav>
-            <a href="/">Home</a>
+          <a href="/">Home</a>
           {{#if loggedIn}}
-          {{#unless onDashboard}}
-            <a href="/dashboard">Dashboard</a>
-          {{/unless}}
-            <button id="logout">Logout</button>
+            {{#unless onDashboard}}
+              <a href="/dashboard">Dashboard</a>
+            {{/unless}}
+            <a href="/" id="logout">Logout</a>
           {{else}}
             <a href="/login">Login</a>
           {{/if}}
         </nav>
         {{#if onDashboard}}
-        <h1>
-          <a href="/dashboard">Dashboard</a>
-        </h1>
+            <h2><span class="badge">Dashboard</span></h2>
         {{else}}
-        <h1>
-          <a href="/">The Tech Blog</a>
-        </h1>
+          <h2><span class="badge">The Tech Blog</span></h2>
         {{/if}}
       </header>
       <main>
