--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,20 @@
 <form class="login-form">
-  <div>
-    <label for="username-login">Username</label>
-    <input type="text" id="username-login"/>
-  </div>
-  <div>
-    <label for="password-login">Password</label>
-    <input type="text" id="password-login"/>
-  </div>
-  <div>
-    <button type="submit">Login!</button>
-  </div>
-  <div>
-    <a href="/signup">Sign up instead</a>
+  <h2>Login</h2>
+  <div class="login">
+    <div>
+      <label for="username-login">Username</label>
+      <input type="text" id="username-login" />
+    </div>
+    <div>
+      <label for="password-login">Password</label>
+      <input type="text" id="password-login" />
+    </div>
+    <div>
+      <button type="submit" class="login-signup-btn">Login!</button>
+    </div>
+    <div>
+      <a href="/signup" class="fix-color">Sign up instead</a>
+    </div>
   </div>
 </form>
 
