--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,6 @@
 <article class="post">
   <div class="title">
-    <a href="/post/{{id}}">{{title}} Posted by {{user.username}} on {{format_date created_at}}</a>
+    <a href="/post/{{id}}">{{title}} <span>Posted by {{user.username}} on {{format_date created_at}}</span></a>
   </div>
   <div class="description">
     {{description}}
