--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,7 +1,8 @@
 <div class="comments">
   {{#each this}}
+  <div class="comment-header"></div>
   <section class="comment">
-    <div class="text">
+    <div class="comment-text">
       {{comment_text}}
     </div>
     <div class="meta">
