--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -107,7 +107,8 @@ textarea:focus, input:focus {
 
 .post-list,
 .login-form,
-.signup-form {
+.signup-form,
+.edit-post-form {
   padding: 0;
   margin: 20px auto;
 }
@@ -116,11 +117,11 @@ textarea:focus, input:focus {
   margin: 20px 50px;
 }
 
-.login-form, .signup-form {
+.login-form, .signup-form, .edit-post-form {
   width: 90%;
 }
 
-.login-form h2, .signup-form h2 {
+.login-form h2, .signup-form h2, .edit-post-form h2 {
   font-size: 1em;
   padding: 12px 12px 8px 12px;
   margin-bottom: 0;
@@ -132,12 +133,12 @@ textarea:focus, input:focus {
   width: 100%;
 }
 
-.login, .signup {
+.login, .signup, .edit-post {
   border: 5px solid var(--main-color);
   padding: 10px;
 }
  
-.login input, .signup input{
+.login input, .signup input, .edit-post input{
   margin-bottom: 10px;
   width: 100%;
 }
