--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,6 +1,7 @@
-<section>
+<div>
   <form class="edit-post-form">
     <h2>Edit Post</h2>
+    <div class="edit-post">
     <div>
       <label for="post-title">Title</label>
       <input type="text" id="post-title" />
@@ -12,6 +13,7 @@
     <button type="submit">Update post</button>
     <button type="button" class="delete-post-btn">Delete</button>
   </form>
+  </div>
 </section>
 
 <script src="/javascript/edit-post.js"></script>
