--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,6 +1,7 @@
 <section>
   <form class="new-post-form">
     <h2>Create New Post</h2>
+    <div class="new-post">
     <div>
       <label for="post-title">Title</label>
       <input type="text" id="post-title" />
@@ -10,9 +11,10 @@
       <input type="text" id="post-description" />
     </div>
     <div>
-      <button type="submit">Create</button>
+      <button type="submit" class="post-create-btn">Create</button>
     </div>
   </form>
+  </div>
   <div>
     <a href="/dashboard/new-post">+ New Post</a>
   </div>
